v1.0.0/modules/schema/pages/class/EPAStandard.adoc
= `EPAStandard`
:toclevels: 4


+++Standard published by EPA (United States Environmental Protection Agency).+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EPAStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* *`EPAStandard`*


== Slots




[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<standardEdition,`standardEdition`>>
| 0..1
| xref::enumeration/EPAStandardEditionKind.adoc[`EPAStandardEditionKind`]
| +++Edition of EPA standard.+++

| <<standardNumber,`standardNumber`>>
| 0..1
| xref::enumeration/EPAStandardKind.adoc[`EPAStandardKind`]
| +++EPA standard number.+++
|===

'''


//[discrete]
[#standardEdition]
=== `standardEdition`
+++Edition of EPA standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EPAStandard.standardEdition`
| Cardinality
| 0..1
| Type
| xref::enumeration/EPAStandardEditionKind.adoc[`EPAStandardEditionKind`]


|===

//[discrete]
[#standardNumber]
=== `standardNumber`
+++EPA standard number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EPAStandard.standardNumber`
| Cardinality
| 0..1
| Type
| xref::enumeration/EPAStandardKind.adoc[`EPAStandardKind`]


|===


